# adversarial-code-reviewer

./: .acrrc.yaml.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENT1_JOURNAL.md  AGENT2_JOURNAL.md  AGENT4_JOURNAL.md  COG_TEMPLATE.txt  GIT_HISTORY.md  IDEA.md  INSTALLATION.md  LICENSE  Makefile  PATTERN_SCHEMA.md  PRD.md  PROMPT.md  README.md  SCAFFOLDING_BRIEF.md  SUMMARY_ACTIONS.md  TODO.md  USER_NOTES.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
acr/: __init__.py  __main__.py
acr/allowlist/: __init__.py  manager.py  parser.py
acr/annotations/: __init__.py  manager.py
acr/cli/: __init__.py  attack.py  completion.py  config.py  doctor.py  init.py  patterns.py  report.py  scan.py  version.py
acr/config/: __init__.py  credentials.py  loader.py  schema.py  validator.py
acr/core/: __init__.py  analyzer.py  ast_parser.py  cfg_builder.py  circular_dependency.py  dfg_builder.py  entry_points.py  generated_code.py  legacy_support.py  sink_identification.py  taint_tracker.py
acr/denylist/: __init__.py  manager.py  parser.py
acr/llm/: __init__.py  attack_generator.py  cache.py  client.py  cost_tracking.py  prompt_injection.py  prompts.py  redaction.py
acr/models/: __init__.py  aggregator.py  confidence_scorer.py  config.py  finding.py  pattern.py
acr/patterns/: __init__.py  loader.py  matcher.py  schema.py
acr/reporters/: __init__.py  base.py  json_reporter.py  markdown.py
acr/utils/: __init__.py  cache.py  degradation.py  error_formatter.py  errors.py  helpers.py  logger.py
archive/agent-journals/: AGENT0_JOURNAL.md  AGENT1_JOURNAL.md  AGENT2_JOURNAL.md  AGENT3_JOURNAL.md  AGENT4_JOURNAL.md
journal/: GIT_HISTORY.md  HANDOFF.md  INITIAL_PROMPT[done].md  JOURNAL.md  STATUS_UPDATE_2026-01-19.md
tests/: __init__.py  conftest.py  test_error_formatter.py
tests/fixtures/: vulnerable_code.py
tests/unit/: test_allowlist_manager.py  test_allowlist_parser.py  test_annotation_manager.py  test_ast_parser.py  test_attack_generator.py  test_cache.py  test_cfg_builder.py  test_circular_dependency.py  test_cli.py  test_confidence_scorer.py  test_config.py  test_credentials.py  test_degradation.py  test_denylist_manager.py  test_denylist_parser.py  test_dfg_builder.py  test_entry_points.py  test_error_recovery_integration.py  test_errors.py  test_generated_code.py  test_legacy_support.py  test_llm_cache.py  test_models.py  test_pattern_loader.py  test_pattern_matcher.py  test_prompt_injection.py  test_redaction.py  test_reporters.py  test_sink_identification.py  test_taint_tracker.py  test_utils.py
tests/unit/llm/: __init__.py  test_client.py  test_cost_tracking.py  test_prompts.py
